Fix VS2013 project files
Last commit was on mac so I was unable to incude the VS project files
additions for threading-windows.c.

--- a/vs/2013/libobs/libobs.vcxproj
+++ b/vs/2013/libobs/libobs.vcxproj
@@ -119,6 +119,7 @@
     <ClCompile Include="..\..\..\libobs\util\platform-windows.c" />
     <ClCompile Include="..\..\..\libobs\util\platform.c" />
     <ClCompile Include="..\..\..\libobs\util\text-lookup.c" />
+    <ClCompile Include="..\..\..\libobs\util\threading-windows.c" />
     <ClCompile Include="..\..\..\libobs\util\utf8.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
