Simplify and extend callback/signalling system
- Signals and dynamic callbacks now require declarations to be made
  before being used.  What this does is allows us to get information
  about the functions dynamically which can be relayed to the user and
  plugins for future extended usage (this should have big implications
  later for scripting in particular, hopefully).

- Reduced the number of types calldata uses from "everything I could
  think of" to simply integer, float, bool, pointer/object, string.
  Integer data is now stored as long long.  Floats are now stored as
  doubles (check em).

- Use a more consistent naming scheme for lexer error/warning macros.

- Fixed a rather nasty bug where switching to an existing scene would
  cause it to increment sourceSceneRefs, which would mean that it would
  never end up never properly removing the source when the user clicks
  removed (stayed in limbo, obs_source_remove never got called)

--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -58,10 +58,12 @@ endif()
 
 set(libobs_callback_SOURCES
 	callback/calldata.c
+	callback/decl.c
 	callback/signal.c
 	callback/proc.c)
 set(libobs_callback_HEADERS
 	callback/calldata.h
+	callback/decl.h
 	callback/proc.h
 	callback/signal.h)
 
