Reimplement monitor capture
 - Implement windows monitor capture (code is so much cleaner than in
   OBS1).  Will implement duplication capture later

 - Add GDI texture support to d3d11 graphics library

 - Fix precision issue with sleep timing, you have to call
   timeBeginPeriod otherwise windows sleep will be totally erratic.

--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -25,7 +25,8 @@ if(WIN32)
 		util/threading-windows.c
 		util/platform-windows.c)
 	set(libobs_PLATFORM_DEPS
-		w32-pthreads)
+		w32-pthreads
+		winmm.lib)
 elseif(APPLE)
 	set(libobs_PLATFORM_SOURCES
 		obs-cocoa.c
