--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -3,6 +3,7 @@ include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/libobs")
 if(WIN32)
 	add_subdirectory(dshow)
 	add_subdirectory(win-wasapi)
+	add_subdirectory(win-capture)
 elseif(APPLE)
 	add_subdirectory(mac-capture)
 endif()
