Add source properties window (very preliminary)
 - Add a properties window for sources so that you can now actually edit
   the settings for sources.  Also, display the source by itself in the
   window (Note: not working on mac, and possibly not working on linux).

   When changing the settings for a source, it will call
   obs_source_update on that source when you have modified any values
   automatically.

 - Add a properties 'widget', eventually I want to turn this in to a
   regular nice properties view like you'd see in the designer, but
   right now it just uses a form layout in a QScrollArea with regular
   controls to display the properties.  It's clunky but works for the
   time being.

 - Make it so that swap chains and the main graphics subsystem will
   automatically use at least one backbuffer if none was specified

 - Fix bug where displays weren't added to the main display array

 - Make it so that you can get the properties of a source via the actual
   pointer of a source/encoder/output in addition to being able to look
   up properties via identifier.

 - When registering source types, check for required functions (wasn't
   doing it before).  getheight/getwidth should not be optional if it's
   a video source as well.

 - Add an RAII OBSObj wrapper to obs.hpp for non-reference-counted
   libobs pointers

 - Add an RAII OBSSignal wrapper to obs.hpp for libobs signals to
   automatically disconnect them on destruction

 - Move the "scale and center" calculation in window-basic-main.cpp to
   its own function and in its own source file

 - Add an 'update' callback to WASAPI audio sources

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -51,7 +51,9 @@ set(obs_SOURCES
 	obs-app.cpp
 	window-basic-main.cpp
 	window-basic-settings.cpp
+	window-basic-properties.cpp
 	window-namedialog.cpp
+	properties-view.cpp
 	qt-wrappers.cpp)
 
 set(obs_HEADERS
@@ -60,14 +62,18 @@ set(obs_HEADERS
 	window-main.hpp
 	window-basic-main.hpp
 	window-basic-settings.hpp
+	window-basic-properties.hpp
 	window-namedialog.hpp
+	properties-view.hpp
+	display-helpers.hpp
 	qt-display.hpp
 	qt-wrappers.hpp)
 
 set(obs_UI
 	forms/NameDialog.ui
 	forms/OBSBasic.ui
-	forms/OBSBasicSettings.ui)
+	forms/OBSBasicSettings.ui
+	forms/OBSBasicProperties.ui)
 
 set(obs_QRC
 	forms/obs.qrc)
